tests/snapshots/asm_snapshots__asm_u64_add@i686-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::u64::Uint64 as core::ops::arith::Add>::add,"ax",@progbits
	.globl	<bigints::u64::Uint64 as core::ops::arith::Add>::add
	.p2align	4
.type	<bigints::u64::Uint64 as core::ops::arith::Add>::add,@function
<bigints::u64::Uint64 as core::ops::arith::Add>::add:
	.cfi_startproc
	mov eax, dword ptr [esp + 12]
	mov edx, dword ptr [esp + 16]
	add eax, dword ptr [esp + 4]
	adc edx, dword ptr [esp + 8]
	ret
