tests/snapshots/asm_snapshots__asm_u64_add_armv7@armv7-unknown-linux-gnueabihf.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u64::Uint64 as core::ops::arith::Add>::add:
	adds r0, r2, r0
	adc r1, r3, r1
	bx lr
