tests/snapshots/asm_snapshots__asm_u64_div@i686-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u64::Uint64 as core::ops::arith::Div>::div:
	push ebx
	sub esp, 8
	mov eax, dword ptr [esp + 24]
	mov ecx, dword ptr [esp + 28]
	call .L68$pb
.L68$pb:
	pop ebx
.Ltmp:
	add ebx, offset _GLOBAL_OFFSET_TABLE_+(.Ltmp-.L68$pb)
	mov edx, eax
	or edx, ecx
	je .LBB_2
	push ecx
	push eax
	push dword ptr [esp + 28]
	push dword ptr [esp + 28]
	call __udivdi3@PLT
	add esp, 24
	pop ebx
	ret
.LBB_2:
	sub esp, 12
	lea eax, [ebx + .Lanon.12@GOTOFF]
	push eax
	call core::panicking::panic_const::panic_const_div_by_zero@PLT
