tests/snapshots/asm_snapshots__asm_u64_div_armv7@armv7-unknown-linux-gnueabihf.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u64::Uint64 as core::ops::arith::Div>::div:
	push {r11, lr}
	orrs r12, r2, r3
	beq .LBB_2
	bl __aeabi_uldivmod
	pop {r11, pc}
.LBB_2:
	ldr r0, .LCPI68_0
.LPC68_0:
	add r0, pc, r0
	mov lr, pc
	b core::panicking::panic_const::panic_const_div_by_zero
.LCPI68_0:
